sfdx-source/force-app/main/default/objects/Google_Drive__x/Google_Drive__x.object-meta.xml
<CustomObject>
    <description>LEM-2994: It provides the visibility of files and folders through the integrated Google Drive using the “Files Connect: Google Drive” external data source.</description>
    <externalDataSource>Google_Drive</externalDataSource>
    <externalName>items_Google_Drive</externalName>
    <label>Google_Drive</label>
    <pluralLabel>Google_Drive</pluralLabel>
</CustomObject>