sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>LEM-2994: It captures details of the author of the file or folder.</description>
    <externalDeveloperName>Author</externalDeveloperName>
    <label>Author</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>