sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>LEM-2994: It captures additional comments or details related to the file or folder.</description>
    <externalDeveloperName>Comment</externalDeveloperName>
    <label>Comment</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>