sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/ContentLength__c.field-meta.xml
<CustomField>
    <fullName>ContentLength__c</fullName>
    <description>LEM-2994: It captures size of the content in the file.</description>
    <externalDeveloperName>ContentLength</externalDeveloperName>
    <label>ContentLength</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>