sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <description>LEM-2994: It captures the date on which the file or folder was created.</description>
    <externalDeveloperName>CreationDate</externalDeveloperName>
    <label>CreationDate</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>