sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/DownloadUrl__c.field-meta.xml
<CustomField>
    <fullName>DownloadUrl__c</fullName>
    <description>LEM-2994: It captures URL used to download the file or folder.</description>
    <externalDeveloperName>DownloadUrl</externalDeveloperName>
    <label>DownloadUrl</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>