sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/IsFolder__c.field-meta.xml
<CustomField>
    <fullName>IsFolder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-2994: It helps identify whether the entity is a Google Drive folder or file.</description>
    <externalDeveloperName>IsFolder</externalDeveloperName>
    <label>IsFolder</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>