sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/MimeType__c.field-meta.xml
<CustomField>
    <fullName>MimeType__c</fullName>
    <description>LEM-2994: It captures the type of file.</description>
    <externalDeveloperName>MimeType</externalDeveloperName>
    <label>MimeType</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>