sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>LEM-2994: It captures name of the file or folder.</description>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Name</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>