sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <description>LEM-2994: It captures parent of the file or folder.</description>
    <externalDeveloperName>ParentId</externalDeveloperName>
    <label>ParentId</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>