sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <description>LEM-2994: It captures date on which the file or folder was last updated.</description>
    <externalDeveloperName>UpdateDate</externalDeveloperName>
    <label>UpdateDate</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>