sfdx-source/force-app/main/default/objects/Google_Drive__x/fields/UpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>UpdatedBy__c</fullName>
    <description>LEM-2994: It captures details of the user that last updated the file or folder.</description>
    <externalDeveloperName>UpdatedBy</externalDeveloperName>
    <label>UpdatedBy</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>